# gpu-load-balance

./: .CMakeLists.txt.swp  .gitignore  .hello.cu.swn  .hello.cu.swo  .hello.cu.swp  .particles.cpp.swp  .particles.cu.swn  .particles.cu.swo  .particles.cu.swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ThesisExample.tex  a.out  blitz  cmake_install.cmake  env_setup.sh  foo  hello.cu  job.sh  mdl2  particles.cpp  particles.cu  particles.cu.old  particles.cu.old.2
analysis/: analysis.job.sh  analysis.sh  analyze.py  analyze.sh  results0  results1
analysis/cpu-reduce/: CMakeLists.txt  Readme.md  analysis.job.sh  analysis.sh  core  main.cpp  main2.cpp  results
analysis/gpu-partition/: analysis.job.sh  foo1  foo2  gpu-partition.cu  partition.cu  partition2.cu
analysis/gpu-reduce/: Readme.md  analysis.job.sh  findCutService.cu  results  results3
analysis/iter-performance/: .main.s.swo  main.cpp  main.s
code/: Readme.md
code/src/: cell.h  main.cpp
code/src/comm/: MPIMessaging.h  messaging.h
code/src/services/: GPUservices.cu  countService.cpp
code/tests/: test.cpp
cpu/: Makefile  Readme.md  main.c  main.cpp  mpi.cpp  orb.c  orb.cpp  test.c  test.cpp
cpu/analysis/: analyze.sh
cpu/src/: Cell.h  Cells.cpp  Cells.h  IO.h  Makefile  Makefile copy  Orb.cpp  Orb.h  cell.cpp  cell.h  comm.h  constants.h  main.cpp  mpi-comm.cpp  mpi-comm.h  orb.cpp  orb.h  services.cpp  services.h  tasks.cpp  tasks.h
cpu/src/cells/: Cells.cpp  Cells.h  cell.cpp  cells.cpp  cells.h
cpu/src/comm/: MPIMessaging.cpp  MPIMessaging.h  comm.h  messaging.h  mpi-comm.cpp  mpi-comm.h
cpu/src/mpi/: mpi.cpp
cpu/src/orb/: Orb.cpp  Orb.h  orb.cpp
cpu/src/services/: GPUservices.cu  services.cpp  services.h
cuda/: plot.sh
data/: generator.c  generator.cpp
debug/: glb
documentation/: abstract.txt  cuda.sty  notes.bcf  notes.lof  notes.lot  notes.run.xml  notes.synctex(busy)  notes.tex  particles11.csv  particles12.csv  reference.bib  results0.csv  results1.csv  speedups.csv
documentation/Notes/: hardware.sty  notes.dvi  notes.lyx  notes.tex  numExample.csv  particles10.csv  particles4.csv  particles5.csv  particles6.csv  particles7.csv  particles8.csv  particles9.csv  reference.bib
documentation/Proposal/: IFIletter.cls  main.tex
gpu/: Makefile  Readme.md
gpu/src/: Cell.h  Orb.cu  Orb.h  main.cpp
measurements/: Readme.md
measurements/median/: binaryCut.cpp
measurements/ops/: ops.cpp
plotting/: Readme.md  scatterplot.gnu
src/: IO.cpp  IO.h  cell.h  constants.h  countLeftGPUAxis.cu  glb.cpp  orb.cpp  orb.h  orbit.cpp
src/comm/: MPIMessaging.cpp  MPIMessaging.h  messaging.h
src/services/: MDLcountLeftService.cpp  TraversePST.cpp  TraversePST.h  axisSwapService.cpp  axisSwapService.h  baseService.h  buildTreeGPU.cu  buildTreeGPU.h  buildTreeService.cpp  buildTreeService.h  copyCells.cu  copyCells.h  copyParticles.cu  copyParticles.h  copyToDevice.cu  copyToDevice.cuh  copyToDevice.h  copyToDeviceService.cpp  copyToDeviceService.cu  copyToDeviceService.h  count.cpp  count.h  countLeft.cpp  countLeft.cu  countLeft.cuh  countLeft.h  countLeft2.cu  countLeft3.cu  countLeftAxis.cu  countLeftAxis.h  countLeftGPU.cu  countLeftGPU2.cu  countLeftGPUAtomic.cu  countLeftGPUAtomic.h  countLeftGPUAxis.cu  countLeftGPUAxis.h  countLeftGPUService.cpp  countLeftGPUService.cu  countLeftGPUService.h  countLeftService.cpp  (+42 more)
src/tests/: catch2.h  partitionGPUTest.cpp  tests.cpp
src/utils/: condReduce.cu  condReduce.cuh  reduce.cu  reduce.cuh
tipsy/: testio.cxx  tipsy.tar.bz2
writing/: notes.bbl  notes.blg  notes.tex  reference.bib
writing/Notes/: mymacros.sty  notes.bcf  notes.run.xml  notes.tex  notes.toc  parallelProcessing.sty  reference.bib
writing/Proposal/: literature.bib
